--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -2,18 +2,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:chatview="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.marco.bluenet_01.chatFragment"
     android:id="@+id/chatFrame">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- ChatView courtesy of https://github.com/timigod/android-chat-ui -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@mipmap/bluenet_icon"/>
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Please select an available user on the map"
+            android:textSize="20sp"
+            android:textColor="@color/red"
+            android:id="@+id/chat_header"/>
+        <co.intentservice.chatui.ChatView
+            android:id="@+id/chat_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            chatview:bubbleElevation="elevated"
+            chatview:bubbleBackgroundRcv="@color/white"/>
+    </LinearLayout>
 
 </FrameLayout>
