--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,13 +8,13 @@
 
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="android:colorPrimary">@color/u_blue_light</item>
-        <item name="android:colorPrimaryDark">@color/u_blue_darker</item>
+        <!--<item name="android:colorPrimary">@color/u_blue_light</item>
+        <item name="android:colorPrimaryDark">@color/u_blue_darker</item>-->
     </style>
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" >
-        <item name="android:colorPrimary">@color/u_blue_light</item>
-        <item name="android:colorPrimaryDark">@color/u_blue_darker</item>
+        <!--<item name="android:colorPrimary">@color/u_blue_light</item>
+        <item name="android:colorPrimaryDark">@color/u_blue_darker</item>-->
     </style>
 
 </resources>
