--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,10 +4,15 @@
     android:layout_height="match_parent"
     tools:context="com.example.marco.bluenet_01.profileFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- TODO: Update blank fragment layout
+    Maybe use https://github.com/afollestad/material-dialogs?
+    the preference screen is finicky
+    this xml is unused for now
+    -->
+    <!--<fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/profile_fragment">
+    </fragment>-->
 
 </FrameLayout>
