--- a/app/src/main/res/layout/nav_drawer_switch.xml
+++ b/app/src/main/res/layout/nav_drawer_switch.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -8,6 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Device Discoverable           "
+        android:textOff="off"
+        android:textOn="on"
+        app:showText="true"
         android:padding="16dp"
         android:textAlignment="viewStart"/>
 </LinearLayout>
