--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -39,4 +39,10 @@
         app:actionLayout="@layout/nav_drawer_switch"
         android:title="" />
 
+    <item
+        android:id="@+id/emergencyButton"
+        app:actionLayout="@layout/nav_drawer_emergency"
+        android:title=""
+    />
+
 </menu>
